Added image to loading

--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -122,7 +122,7 @@
               <div class="card">
                 <div class="card-body">
                   <img class="card-img-top"
-                    src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+                    src="{{item.imageUrl}}"
                     alt="Card image cap" href="#/">
                   <br>
                   <br>
