--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,3 @@
-
 <!-- <div class="container float-left"> -->
 <!-- <img src="http://placehold.it/820x320" class="img-fluid" alt="Responsive image"> -->
 <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -26,236 +25,111 @@
 <br>
 <br>
 
-<!-- <div class="col-md-3" id="sideBarLeft">
-</div> -->
-
-<!-- <div class="card-deck" style="width: 70rem;" *ngFor="let item of itemsNoAuth">
-=======
-<div class="col-md-3" id="sideBarLeft">
-  <br>
-  <br>
-   <p class="lead">Brand</p> -->
 <div class="list-group">
-  <!-- <a class="list-group-item" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" >Test
-    </a> -->
+
 </div>
 <!-- <p class="lead">Colors</p> -->
 <div class="list-group">
-  <!-- <a class="list-group-item" href="#/" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
-      ng-repeat="color in vm.colors" href="#/">Silver
-    </a><a class="list-group-item ng-binding ng-scope" href="#/">White
-    </a> -->
+
 </div>
 <!-- <p class="lead">Items</p> -->
 <div class="list-group">
-  <!-- <a class="list-group-item"href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" href="#/" >Current Offers On Items
-       ngIf: category === vm.params.value </a> end ngRepeat: category in vm.categories <a
-      class="list-group-item ng-binding ng-scope"href="#/">Items Won</a> -->
-  <!-- ngIf: category === vm.params.value -->
-  <!-- end ngRepeat: category in vm.categories -->
-</div>
-
-
-<div class="col-md-3" id="sideBarLeft">
-  <br>
-  <br>
-  <!-- <p class="lead">Brand</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" >Test
-    </a> -->
-  </div>
-  <!-- <p class="lead">Colors</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item" href="#/" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
-      ng-repeat="color in vm.colors" href="#/">Silver
-    </a><a class="list-group-item ng-binding ng-scope" href="#/">White
-    </a> -->
-  </div>
-  <!-- <p class="lead">Items</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item"href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" href="#/" >Current Offers On Items
-       ngIf: category === vm.params.value </a> end ngRepeat: category in vm.categories <a
-      class="list-group-item ng-binding ng-scope"href="#/">Items Won</a> -->
-    <!-- ngIf: category === vm.params.value -->
-    <!-- end ngRepeat: category in vm.categories -->
-  </div>
 
 </div>
 
-
-<!-- <div class="card-deck" style="width: 70rem;" *ngFor="let item of itemsNoAuth">
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap" href="#/">
-    <div class="card-body">
-
-      <hr>
-      <h5 class="card-title">{{item.id}}</h5>
-      <p class="card-text">{{item.name}}</p>
-      <p class="card-text">{{item.description}}</p>
-      <input type="hidden" value="{{item.id}}">
-      <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">Make Offer</button>
-
-      <br>
-      <hr>
-    </div>
-  </div>
-</div> -->
+<br>
+<ul class="list-group" id="availableItemsULClass">
+    <!-- <li class="list-group-item list-group-item-dark"><h3>Available Items</h3></li> -->
+    <li class="list-group-item "><h3>Available Items</h3></li>
+  </ul>
 <div *ngIf='!showWarning && !showSuspended'>
-  <br>
-
   <div class="container" *ngFor="let item of itemsNoAuth">
-    <!-- <div class="row justify-content-center"> -->
-    <div class="col-md-14">
-      <div class="card">
-        <!-- <div class="card-header"></div> -->
-        <div class="card-body">
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="card">
-                <div class="card-body">
-                  <img class="card-img-top"
-                    src="{{item.imageUrl}}"
-                    alt="Card image cap" href="#/">
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                <div class="card-body">
-                  <br>
-                  <a>{{item.name}}</a>
-                  <hr>
-                  <br>
-                  <a>{{item.description}}</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                <div class="card-body">
-                  <br>
-                  <br>
-                  <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">Make
-                    Offer</button>
-                  <br>
-                  <br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <hr>
-        </div>
-      </div>
-    </div>
+    <div class="card">
+      <article class="itemlist">
+        <div class="row row-sm">
+          <aside class="col-sm-3">
+            <div class="img-wrap"><img src="{{item.imageUrl}}" class="img-md"></div>
+
+          </aside> <!-- col.// -->
+          <div class="col-sm-6">
+            <div class="text-wrap">
+              <h4 class="title"> {{item.name}} </h4>
+              <p>{{item.description}}</p>
+              <p class="rating-wrap my-0 text-muted">
+                <span class="label-rating">132 reviews</span>
+                <span class="label-rating">154 orders </span>
+              </p> <!-- rating-wrap.// -->
+            </div> <!-- text-wrap.// -->
+          </div> <!-- col.// -->
+          <aside class="col-sm-3">
+            <div class="border-left pl-3">
+              <div class="price-wrap">
+                <span class="h3 price"> $56 </span><del class="price-old"> $98</del>
+              </div> <!-- info-price-detail // -->
+              <p class="text-success">Free shipping</p>
+              <p>
+                <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">Item Details</button>
+                <!-- <a href="#" class="btn btn-light"> Details </a>  -->
+              </p>
+            </div> <!-- action-wrap.// -->
+          </aside> <!-- col.// -->
+        </div> <!-- row.// -->
+      </article> <!-- itemlist.// -->
+    </div> <!-- card.// -->
   </div>
 </div>
 <div *ngIf='showWarning' class='warningDiv'>
-    <h1>You must login to continue!</h1>
-  </div>
-  <div *ngIf='showSuspended' class='warningDiv'>
-    <h1>Your account has been suspended!</h1>
-  </div>
-<!-- </div> -->
-<!-- <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-12">
-        <div class="card">
-          <div class="card-header">{{ __('menu.headings.add_menu') }}</div>
+  <h1>You must login to continue!</h1>
+</div>
+<div *ngIf='showSuspended' class='warningDiv'>
+  <h1>Your account has been suspended!</h1>
+</div>
+
+
+<!-- <div class="row justify-content-center"> -->
+<!-- <div class="col-md-14">
+          <div class="card">
+
             <div class="card-body">
-                <div class="card" style="width: 18rem;"  *ngFor="let item of itemsNoAuth">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <img class="card-img-top"
+                        src="{{item.imageUrl}}"
+                        alt="Card image cap" href="#/">
+                      <br>
+                      <br>
+                      <br>
+                      <br>
                     </div>
                   </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <br>
+                      <a>{{item.name}}</a>
+                      <hr>
+                      <br>
+                      <a>{{item.description}}</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="card">
+                    <div class="card-body">
+                      <br>
+                      <br>
+                      <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">Make
+                        Offer</button>
+                      <br>
+                      <br>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <hr>
             </div>
           </div>
-        </div>
-      </div>
-  </div>
-<div class="card" style="width: 18rem;"  *ngFor="let item of itemsNoAuth">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div> -->
-<!-- <div class="card-deck" style="width: 70rem;">
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-</div> -->
-<!-- <br>
-<br>
-<div class="card" *ngFor="let item of items">
-  <ul class="list-group">
-    <li class="list-group-item">ID : {{item.id}} </li>
-    <li class="list-group-item">Author :{{item.authorName}}</li>
-    <li class="list-group-item">Category :{{item.category}}</li>
-  </ul>
-  <button (click)="removeBook(book)" class="btn btn-danger">X</button>
-  <button (click)="editBook(book)" class="btn btn-success">^</button>
-  <hr>
-</div> -->
+        </div>  here -->
