--- a/Angular/eBarter/src/app/components/homepage/homepage.component.css
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.css
@@ -118,3 +118,12 @@ form input {
 h3{
   text-align: center;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  width: 90%;
+  border-style: solid black;
+}
