--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -1,126 +1,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<!-- <div class="container float-left"> -->
-<!-- <img src="http://placehold.it/820x320" class="img-fluid" alt="Responsive image"> -->
-<!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner h-50 d-inline-block">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="http://placehold.it/820x320" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://placehold.it/820x320" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://placehold.it/820x320" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>Ï
-</div> -->
-
-<br>
-<br>
-<br>
-<br>
-
-<!-- <div class="col-md-3" id="sideBarLeft">
-</div> -->
-
-<!-- <div class="card-deck" style="width: 70rem;" *ngFor="let item of itemsNoAuth">
-=======
-<div class="col-md-3" id="sideBarLeft">
-  <br>
-  <br>
- <p class="lead">Brand</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" >Test
-    </a> -->
-  </div>
-  <!-- <p class="lead">Colors</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item" href="#/" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
-      ng-repeat="color in vm.colors" href="#/">Silver
-    </a><a class="list-group-item ng-binding ng-scope" href="#/">White
-    </a> -->
-  </div>
-  <!-- <p class="lead">Items</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item"href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" href="#/" >Current Offers On Items
-       ngIf: category === vm.params.value </a> end ngRepeat: category in vm.categories <a
-      class="list-group-item ng-binding ng-scope"href="#/">Items Won</a> -->
-      <!-- ngIf: category === vm.params.value --><!-- end ngRepeat: category in vm.categories -->
-  </div>
-
-<div class="col-md-3" id="sideBarLeft">
-  <br>
-  <br>
-  <!-- <p class="lead">Brand</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" >Test
-    </a> -->
-  </div>
-  <!-- <p class="lead">Colors</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item" href="#/" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
-      ng-repeat="color in vm.colors" href="#/">Silver
-    </a><a class="list-group-item ng-binding ng-scope" href="#/">White
-    </a> -->
-  </div>
-  <!-- <p class="lead">Items</p> -->
-  <div class="list-group">
-    <!-- <a class="list-group-item"href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" href="#/" >Current Offers On Items
-       ngIf: category === vm.params.value </a> end ngRepeat: category in vm.categories <a
-      class="list-group-item ng-binding ng-scope"href="#/">Items Won</a> -->
-      <!-- ngIf: category === vm.params.value --><!-- end ngRepeat: category in vm.categories -->
-  </div>
-</div>
-<div *ngIf='showWarning' class='warningDiv'>
-  <h1>You must login to continue!</h1>
-</div>
-<div *ngIf='showSuspended' class='warningDiv'>
-  <h1>Your account has been suspended!</h1>
-</div>
-
-
-<div *ngIf='!showWarning && !showSuspended'>
-<div class="card-deck" style="width: 70rem;" *ngFor="let item of itemsNoAuth">
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap" href="#/">
-    <div class="card-body">
-
-      <hr>
-      <h5 class="card-title">{{item.id}}</h5>
-      <p class="card-text">{{item.name}}</p>
-      <p class="card-text">{{item.description}}</p>
-      <input type="hidden" value="{{item.id}}">
-      <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">Make Offer</button>
-
-      <br>
-      <hr>
-    </div>
-  </div>
-</div>
-</div>
 <div *ngIf='showWarning' class='warningDiv'>
   <h1>You must login to continue!</h1>
 </div>
@@ -140,7 +20,7 @@
             <div class="card">
               <div class="card-body">
                 <img class="card-img-top"
-                  src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+                  src="{{item.imageUrl}}"
                   alt="Card image cap" href="#/">
                 <br>
                 <br>
@@ -165,8 +45,7 @@
               <div class="card-body">
                 <br>
                 <br>
-                <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">Make
-                  Offer</button>
+                <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">View Item</button>
                 <br>
                 <br>
               </div>
