--- a/Angular/eBarter/src/app/components/items-selling/items-selling.component.html
+++ b/Angular/eBarter/src/app/components/items-selling/items-selling.component.html
@@ -1,5 +1,4 @@
-
-<div id='title'>
+<!-- <div id='title'>
     <h1>Items I Am Selling</h1>
     </div>
     <div *ngFor="let item of items" id="showOffersForItemsThisUserHasWon" class="card-deck" style="width: 70rem;">
@@ -19,7 +18,52 @@
             </div>
 
       </div>
+    </div> -->
+
+
+
+<br>
+<br>
+<br>
+<div class="container" *ngFor="let item of items" id="showOffersForItemsThisUserHasWon">
+  <div *ngIf="item.itemStatus == 1" class="col-md-14">
+    <div *ngIf="item.user.id == isUser.id" class="card">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img *ngIf="item.user.id == isUser.id" class="card-img-top" src="{{item.imageUrl}}" alt="Card image cap"
+              href="#/">
+            <br>
+            <br>
+          </div>
+          <div *ngIf="item.user.id == isUser.id" class="col-sm-4">
+            <br>
+            <h3>Item Name: </h3>
+            <li>{{item.name}}</li>
+
+            <br>
+            <h3>Item Description: </h3>
+            <li>{{item.description}}</li>
+
+          </div>
+          <div *ngIf="item.user.id == isUser.id" class="col-sm-4">
+            <!-- <div class="card">
+              <div class="card-body"> -->
+            <br>
+            <br>
+            <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">View
+              Item</button>
+            <br>
+            <br>
+            <!-- </div>
+            </div> -->
+          </div>
+        </div>
+        <hr>
+      </div>
     </div>
+  </div>
+</div>
 
 
 
@@ -110,7 +154,7 @@
 
 
 
-      <!-- <h1>Items I won</h1>
+<!-- <h1>Items I won</h1>
       <div *ngFor="let item of items"></div>
         <div *ngIf="item.itemStatus == 2">
                 <br>
@@ -139,7 +183,7 @@
 
 
 
-      <!-- <h1>Items I won</h1>
+<!-- <h1>Items I won</h1>
       <div *ngFor="let item of items"></div>
         <div *ngIf="item.itemStatus == 2">
                 <br>
@@ -156,4 +200,3 @@
                 <br>
           </div>
         </div>  -->
-
