--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -1,132 +1,50 @@
-<!-- <div class="imageLocation">
-    ​<picture *ngIf='!showOffer'>
-      <source srcset={{item.imageUrl}} type="image/svg+xml">
-      <img src="..." class="img-fluid img-thumbnail" alt="...">
-    </picture>
-    ​<picture *ngIf='showOffer'>
-      <source srcset={{offer.imgUrl}} type="image/svg+xml">
-      <img src="..." class="img-fluid img-thumbnail" alt="...">
-    </picture>
-    <ul class="list-group" id="information-on-item">
-      <li *ngIf='!won && showOffer' class="list-group-item bold">Offer Details:</li>
-      <li *ngIf='!won && !showOffer' class="list-group-item bold">Item Details:</li>
-      <li *ngIf='won' class="list-group-item bold">Your Offer Was Accepted!</li>
-      <li *ngIf='!showOffer' class="list-group-item">Item: {{item.name}}</li>
-      <li *ngIf='!showOffer' class="list-group-item">Description: {{item.description}}</li>
-      <li *ngIf='showOffer' class="list-group-item">{{offer.description}}</li>
-      <li *ngIf='won' class="list-group-item bold">Contact the seller to complete the deal!</li>
-      <li *ngIf='won' class="list-group-item">Seller: {{item.user.firstName}} {{item.user.lastName}}</li>
-      <li *ngIf='won' class="list-group-item">Email: {{item.user.email}}</li>
-      <div *ngIf='!won'>
-        <br>
-        <div *ngIf='!selling'>
-          <app-ngbd-modal-config></app-ngbd-modal-config>
-        </div>
-        <br>
+<!-- <div class="container float-left">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <img src="https://www.broadwayproscooters.com/media/catalog/product/cache/1/image/445x/602f0fa2c1f0d1ba5e241f914e856ff9/e/n/env1417.jpeg  " alt="First slide">
       </div>
-    </ul>
-  </div> -->
-
-
-
-
-
-
-
-
-<br>
-<br>
-<div class="card">
-  <div class="row no-gutters">
-    <aside class="col-sm-5 border-right">
-      <article class="gallery-wrap">
-        <div class="img-big-wrap">
-          <div> ​<picture *ngIf='!showOffer'>
-              <source srcset={{item.imageUrl}} type="image/svg+xml">
-              <img src="..." class="img-fluid img-thumbnail" alt="...">
-            </picture>
-          </div>
-        </div> <!-- slider-product.// -->
-      </article> <!-- gallery-wrap .end// -->
-    </aside>
-    <aside class="col-sm-7">
-      <article class="p-5">
-        <h3 class="title mb-3">Original Version of Some product name</h3>
-        <div class="mb-3">
-
-          <br>
-          <br>
-          <br>
-              <ul class="list-group" id="information-on-item">
-                <li *ngIf='!won && showOffer' class="list-group-item bold">Offer Details:</li>
-                <li *ngIf='!won && !showOffer' class="list-group-item bold">Item Details:</li>
-                <li *ngIf='won' class="list-group-item bold">Your Offer Was Accepted!</li>
-                <li *ngIf='!showOffer' class="list-group-item">Item: {{item.name}}</li>
-                <li *ngIf='!showOffer' class="list-group-item">Description: {{item.description}}</li>
-                <li *ngIf='showOffer' class="list-group-item">{{offer.description}}</li>
-                <li *ngIf='won' class="list-group-item bold">Contact the seller to complete the deal!</li>
-                <li *ngIf='won' class="list-group-item">Seller: {{item.user.firstName}} {{item.user.lastName}}</li>
-                <li *ngIf='won' class="list-group-item">Email: {{item.user.email}}</li>
-                <div *ngIf='!won'>
-                  <br>
-                  <div *ngIf='!selling'>
-                    <app-ngbd-modal-config></app-ngbd-modal-config>
-                  </div>
-                  <br>
-                </div>
-              </ul>
-        </div> <!-- price-detail-wrap .// -->
-        <hr>
-        <div *ngIf='!won'>
-            <div id='no-offers' *ngIf='offers.length === 0'>
-              <h2>This item has no offers yet! Be the first to make an offer!</h2>
-            </div>
-            <div class="container" *ngFor="let offer of offers" id="tableForOffers">
-              <table class="table table-sm">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">UserName</th>
-                    <th scope="col">Offer Description</th>
-                    <th scope="col">Location</th>
-                    <th scope="col" hidden>Accept</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th>{{offer.id}}</th>
-                    <td>{{offer.user.username}}</td>
-                    <td>{{offer.description}}</td>
-                    <td>{{offer.user.address.city}} &nbsp;{{offer.user.address.state}}&nbsp;{{offer.user.address.zipCode}}</td>
-
-                    <td><button (click)="changeOfferStatus(offer)" class=" btn btn-success"
-                        *ngIf="item.user.id === bidder.id">Accept Bid</button></td>
-                    <button *ngIf='selling' (click)='viewOffer(offer)' class="btn btn-success">View Offer</button>
-                    <span class='spacer'></span>
-                    <button class="btn btn-success">Accept</button>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+    </div> -->
+<!-- <div class="card-deck" style="width: 70rem;">
+        <div class="card">
+          <img class="card-img-top"src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50" alt="Card image cap">
+          <div class="card-body">
+             <ngb-rating [(rate)]="currentRate"></ngb-rating> -->
+<!-- <hr> -->
+<!-- <pre>Rate: <b>{{currentRate}}</b></pre> -->
+<!-- <p class="card-text">{{item.name}}</p>
+            <p class="card-text">{{item.description}}</p>
+            <a href="item" class="btn btn-success">
+              <input type="hidden" value="{{item.id}}">
+              <span class="button--inner" >Offer Up</span>
+            </a>
             <br>
+            <hr>
           </div>
-      </article> <!-- card-body.// -->
-    </aside> <!-- col.// -->
-  </div> <!-- row.// -->
-</div> <!-- card.// -->
+        </div>
+      </div>
+      <br> -->
 
 
-
-<!-- <div class="imageLocation">
-  ​<picture *ngIf='!showOffer'>
-    <source srcset={{item.imageUrl}} type="image/svg+xml">
+<div class="imageLocation">
+  ​<picture class='itempic' *ngIf='!showOffer'>
+    <source
+      srcset={{item.imageUrl}}
+      type="image/svg+xml">
     <img src="..." class="img-fluid img-thumbnail" alt="...">
   </picture>
-  ​<picture *ngIf='showOffer'>
-    <source srcset={{offer.imgUrl}} type="image/svg+xml">
-    <img src="..." class="img-fluid img-thumbnail" alt="...">
-  </picture>
+  ​<picture class='itempic' *ngIf='showOffer'>
+      <source
+        srcset={{offer.imgUrl}}
+        type="image/svg+xml">
+      <img src="..." class="img-fluid img-thumbnail" alt="...">
+    </picture>
   <ul class="list-group" id="information-on-item">
+      <li id='no-offers' *ngIf='offers.length === 0 && !selling'>
+      This item has no offers yet!  Be the first to make an offer!
+      <span class='spacer'></span>
+      <span *ngIf='!selling'>
+          <app-ngbd-modal-config></app-ngbd-modal-config>
+      </span>
+      </li>
     <li *ngIf='!won && showOffer' class="list-group-item bold">Offer Details:</li>
     <li *ngIf='!won && !showOffer' class="list-group-item bold">Item Details:</li>
     <li *ngIf='won' class="list-group-item bold">Your Offer Was Accepted!</li>
@@ -136,145 +54,83 @@
     <li *ngIf='won' class="list-group-item bold">Contact the seller to complete the deal!</li>
     <li *ngIf='won' class="list-group-item">Seller: {{item.user.firstName}} {{item.user.lastName}}</li>
     <li *ngIf='won' class="list-group-item">Email: {{item.user.email}}</li>
+    <!-- <li class="list-group-item">{{item.endDate}}</li> -->
     <div *ngIf='!won'>
-      <br>
-      <div *ngIf='!selling'>
-        <app-ngbd-modal-config></app-ngbd-modal-config>
-      </div>
-      <br>
+    <br>
     </div>
-  </ul>
+  <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit My Offer</button> -->
+   </ul>
+
 </div>
 
-<br>
-<br>
-
 <div *ngIf='!won'>
-    <div id='no-offers' *ngIf='offers.length === 0'>
-       <h2>This item has no offers yet!  Be the first to make an offer!</h2>
-    </div>
+
  <div class="container" *ngFor="let offer of offers" id="tableForOffers">
-    <h1>{{offer.id}}</h1> -->
+   <!-- <h1>{{offer.id}}</h1> -->
 <!-- //*ngFor="let item of items" -->
   <table class="table table-sm"  >
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">UserName</th>
-        <th scope="col">Offer Description</th>
-        <th scope="col">Location</th>
-        <th scope="col" hidden>Accept</th>
+        <th class="col1" scope="col">#</th>
+        <th class="col2" scope="col">UserName</th>
+        <!-- <th class="offercol" scope="col">Offer</th> -->
+        <th class="col3" scope="col">Location</th>
+        <th class="col4" scope="col" hidden>Accept</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th >{{offer.id}}</th>
         <td >{{offer.user.username}}</td>
-        <td >{{offer.description}}</td>
+        <!-- <td >{{offer.description}}</td> -->
         <td >{{offer.user.address.city}} &nbsp;{{offer.user.address.state}}&nbsp;{{offer.user.address.zipCode}}</td>
-
-        <td><button  (click)="changeOfferStatus(offer)" class=" btn btn-success" *ngIf="item.user.id === bidder.id">Accept Bid</button></td>
+        <td><button  (click)="back()" class=" btn btn-success" *ngIf="showOffer">Back</button>
+        <button (click)='viewOffer(offer)' class="btn btn-success" *ngIf="!showOffer">View Offer</button>
+          <span class='spacer'></span>
+        <button  (click)="changeOfferStatus(offer)" class=" btn btn-success" *ngIf="item.user.id === bidder.id">Accept Offer</button>
+        </td>
         <!-- <button  (click)="changeOfferStatus(offer)"  [(ngModel)]="offerStatus.offerStatus" name="offerStatus" #offerStatus  [(ngModel)]="offer.offerStatus" name="offerStatus" #offerStatus  class=" btn btn-success" *ngIf="item.user.id === bidder.id">Accept Bid</button> -->
         <!-- <button class="btn btn-success" *ngIf="user.offer.id == user.id">Accept</button> -->
 
         <!-- <td *ngFor="let item of items"> -->
           <!-- <p *ngFor="let user of users"></p> -->
-          <button *ngIf='selling' (click)='viewOffer(offer)' class="btn btn-success">View Offer</button>
-          <span class='spacer'></span>
-          <button class="btn btn-success">Accept</button>
+          <!-- <button *ngIf='selling'  (click)='viewOffer(offer)' class="btn btn-success">View Offer</button> -->
+          <!-- <span class='spacer'></span> -->
+          <!-- <button class="btn btn-success">Accept</button> -->
           <!-- <button class="btn btn-success" *ngIf="user.offer.id == user.id">Accept</button> -->
       </tr>
     </tbody>
   </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- <div class="imageLocation">
-  ​<picture *ngIf='!showOffer'>
-    <source srcset={{item.imageUrl}} type="image/svg+xml">
-    <img src="..." class="img-fluid img-thumbnail" alt="...">
-  </picture>
-  ​<picture *ngIf='showOffer'>
-    <source srcset={{offer.imgUrl}} type="image/svg+xml">
-    <img src="..." class="img-fluid img-thumbnail" alt="...">
-  </picture>
-  <ul class="list-group" id="information-on-item">
-    <li *ngIf='!won && showOffer' class="list-group-item bold">Offer Details:</li>
-    <li *ngIf='!won && !showOffer' class="list-group-item bold">Item Details:</li>
-    <li *ngIf='won' class="list-group-item bold">Your Offer Was Accepted!</li>
-    <li *ngIf='!showOffer' class="list-group-item">Item: {{item.name}}</li>
-    <li *ngIf='!showOffer' class="list-group-item">Description: {{item.description}}</li>
-    <li *ngIf='showOffer' class="list-group-item">{{offer.description}}</li>
-    <li *ngIf='won' class="list-group-item bold">Contact the seller to complete the deal!</li>
-    <li *ngIf='won' class="list-group-item">Seller: {{item.user.firstName}} {{item.user.lastName}}</li>
-    <li *ngIf='won' class="list-group-item">Email: {{item.user.email}}</li>
-
-    <div *ngIf='!won'>
-      <br>
-      <div *ngIf='!selling'>
-        <app-ngbd-modal-config></app-ngbd-modal-config>
-      </div>
-      <br>
-    </div>
-  </ul>
 </div>
 
+<!-- <td *ngFor="let item of items"> -->
+    <!-- <p *ngFor="let user of users"> -->
 <br>
-<br>
-<div *ngIf='!won'>
-  <div id='no-offers' *ngIf='offers.length === 0'>
-    <h2>This item has no offers yet! Be the first to make an offer!</h2>
-  </div>
-  <div class="container" *ngFor="let offer of offers" id="tableForOffers">
-    <table class="table table-sm">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">UserName</th>
-          <th scope="col">Offer Description</th>
-          <th scope="col">Location</th>
-          <th scope="col" hidden>Accept</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th>{{offer.id}}</th>
-          <td>{{offer.user.username}}</td>
-          <td>{{offer.description}}</td>
-          <td>{{offer.user.address.city}} &nbsp;{{offer.user.address.state}}&nbsp;{{offer.user.address.zipCode}}</td>
 
-          <td><button (click)="changeOfferStatus(offer)" class=" btn btn-success"
-              *ngIf="item.user.id === bidder.id">Accept Bid</button></td>
-          <button *ngIf='selling' (click)='viewOffer(offer)' class="btn btn-success">View Offer</button>
-          <span class='spacer'></span>
-          <button class="btn btn-success">Accept</button>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <br>
+<!-- <button  class="btn btn-success" *ngIf="item.user.id === bidder.id">Accept Bid</button> -->
+        <!-- <button  class="btn btn-success" *ngIf="item.user == bidder" >Accept Bid</button> -->
+    <!-- </p> -->
+  <!-- </td> -->
+
+
+
+
+</div>
+<!-- <br>
+<br>
+<div class="container" *ngFor="let user of users" id="tableForOffers">
+  <table class="table table-sm">
+    <thead>
+      <tr>
+        <th scope="col">UserName</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>{{user.username}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div> -->
+ <!-- <app-ngbd-carousel-basic></app-ngbd-carousel-basic> -->
+
