--- a/Angular/eBarter/src/app/components/list-item/list-item.component.css
+++ b/Angular/eBarter/src/app/components/list-item/list-item.component.css
@@ -11,13 +11,13 @@
   background-clip: padding-box;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
-  width: 400px;
+  width: 450px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   text-align: center;
 }
 
 
-#showOffersForItemsThisUserHasWon{
-  text-align: center;
 
+.container{
+text-align: center;
 }
