--- a/Angular/eBarter/src/app/components/list-item/list-item.component.html
+++ b/Angular/eBarter/src/app/components/list-item/list-item.component.html
@@ -11,12 +11,43 @@
 <br>
 <br>
 
+<div class="card">
+    <article class="card-body mx-auto" style="max-width: 400px;">
+      <h4 class="card-title mt-3 text-center">List new Item</h4>
+
+        <form>
+            <div class="form-group">
+              <br>
+              <label>Description</label>
+              <!-- <input type="text" class="form-control" name="description" #description> -->
+              <input type="text" class="form-control" name="description" #description [(ngModel)]="item.description">
+            </div>
+            <div class="form-group">
+              <label> Name</label>
+              <input type="text" class="form-control" name="name" #name [(ngModel)]="item.name">
+            </div>
+            <div class="form-group">
+              <label> Image Url</label>
+              <input type="text" class="form-control" name="imageUrl" #imageUrl [(ngModel)]="item.imageUrl">
+            </div>
+            <div class="form-group" id="sub">
+              <button (click)="addItem(item)" class="btn btn-dark">Add
+                Item</button>
+            </div>
+            <br>
+            <br>
+            <br>
+          </form>
+    </article>
+    </div> <!-- card.// -->
+
+<!--
 <div class="container">
   <form>
     <div class="form-group">
       <br>
       <label>Description</label>
-      <!-- <input type="text" class="form-control" name="description" #description> -->
+
       <input type="text" class="form-control" name="description" #description [(ngModel)]="item.description">
     </div>
     <div class="form-group">
@@ -32,4 +63,4 @@
         Item</button>
     </div>
   </form>
-</div>
+</div> -->
