item detail changes

--- a/Angular/eBarter/src/app/components/items-won/items-won.component.html
+++ b/Angular/eBarter/src/app/components/items-won/items-won.component.html
@@ -1,62 +1,16 @@
 
-
-<!-- <div id="showOffersForItemsThisUserIsbiddingOn"class="card-deck" style="width: 70rem;" *ngFor="let item of items">
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap" href="#/">
-    <div class="card-body">
-      <hr>
-      <div *ngIf="item.offer.length > 0">
-        <div class="card" *ngFor="let offer of item.offer">
-          <ul>
-            <li *ngIf="offer.user.id == isBidder.id">{{item.name}}</li>
-            <li *ngIf="offer.user.id == isBidder.id">{{item.description}}</li>
-            <li *ngIf="offer.user.id == isBidder.id">{{offer.description}}</li>
-          </ul>
-        </div>
-      </div>
-      <br>
-      <hr>
-    </div>
-  </div>
-</div> -->
-
-<!-- <div id="showOffersForItemsThisUserIsbiddingOn" class="card-deck" style="width: 70rem;" *ngFor="let item of items">
-  <div *ngIf="item.offers.length > 0">
-    <div *ngFor="let offer of item.offers">
-      <div *ngIf="offer_status_id == 2">
-        <h1>{{offer.offer_status_id}}</h1>
-        <img class="card-img-top" *ngIf="offer.user.id == isBidder.id"
-          src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-          alt="Card image cap" href="#/">
-        <span *ngIf="offer.user.id == isBidder.id">{{item.name}}</span>
-        <br>
-        <span *ngIf="offer.user.id == isBidder.id">{{item.description}}</span>
-        <br>
-        <span *ngIf="offer.user.id == isBidder.id">{{offer.description}}</span>
-        <br>
-      </div>
-    </div>
-  </div>
-</div> -->
-<div id='title'>
+<!-- <div id='title'>
 <h1>My Accepted Offers</h1>
 </div>
-
-
 <div *ngFor="let item of items" id="showOffersForItemsThisUserHasWon" class="card-deck" style="width: 70rem;">
 
   <div *ngIf="item.itemStatus == 2">
       <h1>{{item.name}}</h1>
-      <!-- <div *ngIf="item.offers.length > 0"> -->
         <div *ngFor="let offer of item.offers">
             <div *ngIf="offer.offerStatus == 2">
               <br>
               <br>
               <br>
-          <!-- <div *ngIf="offer.offer_status_id == 2">
-          <h1>{{offer.offer_status_id}}</h1> -->
           <div *ngIf="offer.user.id == isBidder.id">
           <img class="card-img-top" src="{{item.imageUrl}}" alt="Card image cap" href="#/">
           <span>{{item.name}}</span>
@@ -67,9 +21,53 @@
         </div>
       </div>
       </div>
-    <!-- </div> -->
   </div>
-  </div>
+  </div> -->
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="container" *ngFor="let item of items" id="showOffersForItemsThisUserHasWon">
+      <div *ngIf="item.itemStatus == 2" class="col-md-14">
+        <div *ngIf="item.user.id == isBidder.id" class="card">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-4">
+                <img *ngIf="item.user.id == isBidder.id" class="card-img-top" src="{{item.imageUrl}}" alt="Card image cap"
+                  href="#/">
+                <br>
+                <br>
+              </div>
+              <div *ngIf="item.user.id == isBidder.id" class="col-sm-4">
+                <br>
+                <h3>Item Name: </h3>
+                <li *ngIf="item.itemStatus == 2">{{item.name}}</li>
+                <br>
+                <h3>Item Description: </h3>
+                <li *ngIf="item.itemStatus == 2">{{item.description}}</li>
+
+              </div>
+              <div *ngIf="item.user.id == isBidder.id" class="col-sm-4">
+                <br>
+                <br>
+                <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">View
+                  Offer</button>
+                <br>
+                <br>
+              </div>
+            </div>
+            <hr>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
 
 
 
