--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -1,3 +1,4 @@
+
 <div class="imageLocation">
     ​<picture class='itempic' *ngIf='!showOffer'>
       <source
@@ -12,9 +13,10 @@
         <img src="..." class="img-fluid img-thumbnail" alt="...">
       </picture>
     <ul class="list-group" id="information-on-item">
-        <li id='no-offers' *ngIf='offers.length === 0 && !selling'>
-        This item has no offers yet!  Be the first to make an offer!
-        <span class='spacer'></span>
+        <li id='no-offers'>
+          <span *ngIf='offers.length === 0 && !selling'>
+            This item has no offers yet!  Be the first to make an offer!</span>
+        <span *ngIf='!selling' class='spacer'></span>
         <span *ngIf='!selling'>
             <app-ngbd-modal-config></app-ngbd-modal-config>
         </span>
@@ -72,3 +74,78 @@
 
 
   </div>
+
+<!-- <div class="imageLocation">
+    ​<picture class='itempic' *ngIf='!showOffer'>
+      <source
+        srcset={{item.imageUrl}}
+        type="image/svg+xml">
+      <img src="..." class="img-fluid img-thumbnail" alt="...">
+    </picture>
+    ​<picture class='itempic' *ngIf='showOffer'>
+        <source
+          srcset={{offer.imgUrl}}
+          type="image/svg+xml">
+        <img src="..." class="img-fluid img-thumbnail" alt="...">
+      </picture>
+    <ul class="list-group" id="information-on-item">
+        <li id='no-offers' *ngIf='offers.length === 0 && !selling'>
+        This item has no offers yet!  Be the first to make an offer!
+        <span class='spacer'></span>
+        <span *ngIf='!selling'>
+            <app-ngbd-modal-config></app-ngbd-modal-config>
+        </span>
+        </li>
+      <li *ngIf='!won && showOffer' class="list-group-item bold">Offer Details:</li>
+      <li *ngIf='!won && !showOffer' class="list-group-item bold">Item Details:</li>
+      <li *ngIf='won' class="list-group-item bold">Your Offer Was Accepted!</li>
+      <li *ngIf='!showOffer' class="list-group-item">Item: {{item.name}}</li>
+      <li *ngIf='!showOffer' class="list-group-item">Description: {{item.description}}</li>
+      <li *ngIf='showOffer' class="list-group-item">{{offer.description}}</li>
+      <li *ngIf='won' class="list-group-item bold">Contact the seller to complete the deal!</li>
+      <li *ngIf='won' class="list-group-item">Seller: {{item.user.firstName}} {{item.user.lastName}}</li>
+      <li *ngIf='won' class="list-group-item">Email: {{item.user.email}}</li>
+      <div *ngIf='!won'>
+      <br>
+      </div>
+     </ul>
+
+  </div>
+
+  <div *ngIf='!won'>
+
+   <div class="container" *ngFor="let offer of offers" id="tableForOffers">
+    <table class="table table-sm"  >
+      <thead>
+        <tr>
+          <th class="col1" scope="col">#</th>
+          <th class="col2" scope="col">UserName</th>
+           <th class="offercol" scope="col">Offer</th> -->
+          <!-- <th class="col3" scope="col">Location</th>
+          <th class="col4" scope="col" hidden>Accept</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th >{{offer.id}}</th>
+          <td >{{offer.user.username}}</td>
+          <td >{{offer.user.address.city}} &nbsp;{{offer.user.address.state}}&nbsp;{{offer.user.address.zipCode}}</td>
+          <td><button (click)="back()" class=" btn btn-success" *ngIf="showOffer">Back</button>
+          <button (click)='viewOffer(offer)' class="btn btn-success" *ngIf="!showOffer">View Offer</button>
+            <span class='spacer'></span>
+          <button  (click)="changeOfferStatus(offer)" class=" btn btn-success" *ngIf="item.user.id === bidder.id">Accept Offer</button>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <br>
+
+
+
+
+
+
+  </div>  -->
